logs/offboard_pkg/build.make.446.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘Eigen::Vector3d TaskManager::get_ned_circle(double, double, double)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:100:54: error: no matching function for call to ‘TaskManager::trans_and_relative_pos(Eigen::Vector3d&, double&, double&)’
  100 |     return trans_and_relative_pos(pos, yaw_d, theta_d);
      |                                                      ^
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:88:21: note: candidate: ‘Eigen::Vector3d TaskManager::trans_and_relative_pos(Eigen::Vector3d&, double)’
   88 |     Eigen::Vector3d trans_and_relative_pos(Eigen::Vector3d &pos, double yaw_d);
      |                     ^~~~~~~~~~~~~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:88:21: note:   candidate expects 2 arguments, 3 provided
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘Eigen::Vector3d TaskManager::get_ned_line(double, double)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:111:50: error: no matching function for call to ‘TaskManager::trans_and_relative_pos(Eigen::Vector3d&, double&, double)’
  111 |     return trans_and_relative_pos(pos, yaw_d, 0.0);
      |                                                  ^
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:88:21: note: candidate: ‘Eigen::Vector3d TaskManager::trans_and_relative_pos(Eigen::Vector3d&, double)’
   88 |     Eigen::Vector3d trans_and_relative_pos(Eigen::Vector3d &pos, double yaw_d);
      |                     ^~~~~~~~~~~~~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:88:21: note:   candidate expects 2 arguments, 3 provided
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: At global scope:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:114:17: error: no declaration matches ‘Eigen::Vector3d TaskManager::trans_and_relative_pos(Eigen::Vector3d&, double, double)’
  114 | Eigen::Vector3d TaskManager::trans_and_relative_pos(Eigen::Vector3d &pos, double yaw_d, double theta_d)
      |                 ^~~~~~~~~~~
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:88:21: note: candidate is: ‘Eigen::Vector3d TaskManager::trans_and_relative_pos(Eigen::Vector3d&, double)’
   88 |     Eigen::Vector3d trans_and_relative_pos(Eigen::Vector3d &pos, double yaw_d);
      |                     ^~~~~~~~~~~~~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:17:7: note: ‘class TaskManager’ defined here
   17 | class TaskManager
      |       ^~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
